add router superadmin
